[package]
name = "strandify"
version = "0.2.1"
edition = "2021"
authors = ["Loic Coyle <loic.coyle@hotmail.fr>"]
description = "A stringart generation library."
keywords = ["stringart", "generative", "art"]
repository = "https://github.com/loiccoyle/stringart"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "strandify"
path = "src/main.rs"

[dependencies]
image = "0.25.2"
clap = { version = "4.5.14", features = ["derive"] }
clap-verbosity-flag = "2.2.1"
log = "0.4.17"
env_logger = "0.11.5"
indicatif = { version = "0.17.0", features = ["rayon"] }
rand = "0.8.5"
itertools = "0.13.0"
svg = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
resvg = "0.43.0"
rayon = "1.10.0"

[dev-dependencies]
ctor = "0.2.8"
assert_cmd = "2.0.4"
predicates = "3.1.2"
assert_fs = "1.0.7"
criterion = "0.5.1"


[[bench]]
name = "pather"
harness = false

[profile.release]
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*
