[workspace]
members = ["strandify", "strandify-cli"]
resolver = "2"

[workspace.dependencies]
image = "0.25.2"
log = "0.4.17"
env_logger = "0.11.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*
