[package]
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

name = "strandify-wasm"
description = "Wasm bindings for Strandify"
version = "0.1.0"

[dependencies]
strandify = { path = "../strandify", version = "0.4.0" }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

wasm-bindgen = "0.2.93"
base64 = "0.22.1"

# the "js" feature is requried to run wasm-pack
# https://docs.rs/getrandom/latest/getrandom/#webassembly-support
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib"]
