[package]
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

name = "strandify-wasm"
description = "Wasm bindings for Strandify"
version = "0.1.0"

[dependencies]
strandify = { path = "../strandify", version = "0.4.0" }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

wasm-bindgen = "0.2.93"
base64 = "0.22.1"

# the "js" feature is requried to run wasm-pack
# https://docs.rs/getrandom/latest/getrandom/#webassembly-support
getrandom = { version = "0.2", features = ["js"] }
# to avoid: The specifier “env” was a bare specifier, but it is not a valid package specifier.
# https://github.com/rustwasm/wasm-bindgen/discussions/3500#discussioncomment-6334669
instant = { version = "0.1.13", features = ["wasm-bindgen"] }

[lib]
crate-type = ["cdylib"]
