[package]
name = "strandify"
version = "0.4.0"
edition = "2021"
authors = ["Loic Coyle <loic.coyle@hotmail.fr>"]
description = "A stringart generation library."
keywords = ["string-art", "generative-art", "art"]
repository = "https://github.com/loiccoyle/stringart"
license = "MIT"

[dependencies]
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

indicatif = { version = "0.17.0", features = ["rayon"] }
rand = "0.8.5"
itertools = "0.13.0"
svg = "0.17.0"
resvg = "0.43.0"
rayon = "1.10.0"

[dev-dependencies]
ctor = "0.2.8"
criterion = "0.5.1"


[[bench]]
name = "pather"
harness = false
