[package]
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

name = "strandify"
version = "0.4.2"
description = "A string art generation library."
keywords = ["string-art", "generative-art", "art"]

[dependencies]
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

indicatif = "0.17.0"
rand = "0.8.5"
itertools = "0.13.0"
svg = "0.17.0"
resvg = "0.43.0"
rayon = { version = "1.10.0", optional = true }

[dev-dependencies]
ctor = "0.2.8"
criterion = "0.5.1"

[features]
default = ["parallel"]
parallel = ["rayon", "indicatif/rayon"]


[[bench]]
name = "pather"
harness = false
